@@ -326,6 +326,9 @@ Library
 Extension Modules
 -----------------
 
+- Issue #12051: Fix segfault in json.dumps() while encoding highly-nested
+  objects using the C accelerations.
+
 - Issue #12017: Fix segfault in json.loads() while decoding highly-nested
   objects using the C accelerations.
 
